# Selsiro-emulator

./: .clang-format  .clang-tidy  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  conanfile.txt
.devcontainer/: Dockerfile
.github/: constants.env
.github/workflows/: auto-clang-format.yml  ci-full.yml  ci-small.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/Selsiro_emulator/: sample_library.hpp
src/: CMakeLists.txt  main.cpp
src/emulator/: CMakeLists.txt  emulator.hpp  instruction.hpp  registers.hpp  util.hpp
src/emulator/bus/: bus_faults.hpp  ram.hpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: .clang-tidy  CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/emulator/: emulator_test.cpp  instruction_test.cpp  registers_test.cpp
test/emulator/bus/: ram_test.cpp
